# ZhangHaoBa

./: .gitignore  README.md  build-macos-dmg.yml  build.bat  gen_icon.py  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  启动账号仓.bat
.github/workflows/: build-macos-dmg.yml
scripts/: generate-app-icon.ps1
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  error.rs  main.rs
src-tauri/src/commands/: app.rs  backup.rs  copy.rs  export.rs  folder.rs  health.rs  mod.rs  pending.rs  record.rs  search.rs  security.rs  settings.rs  stats.rs  system.rs  tag.rs  trash.rs
src-tauri/src/db/: migrations.rs  mod.rs
src/app/: App.tsx  router.tsx
src/components/common/: Badge.tsx  Dialog.tsx  (+6 more)
src/constants/: protection.ts
src/data/: platformPresets.ts
src/pages/: AllRecordsPage.tsx  BackupPage.tsx  FavoritesPage.tsx  FolderPage.tsx  PendingPage.tsx  RecentPage.tsx  RecordDetailPage.tsx  RecordEditPage.tsx  SettingsPage.tsx  StatsPage.tsx  TagPage.tsx  TrashPage.tsx
src/services/: apiProbeService.ts  backupService.ts  copyService.ts  exportService.ts  folderService.ts  healthService.ts  mockData.ts  pendingService.ts  recordService.ts  searchService.ts  securityService.ts  settingsService.ts  statsService.ts  systemService.ts  tagService.ts  trashService.ts
src/stores/: folderStore.ts  recordStore.ts  settingsStore.ts  tagStore.ts  uiStore.ts
src/styles/: globals.css
src/types/: api.ts  folder.ts  record.ts  settings.ts  tag.ts
src/utils/: format.ts
(+4 files in other folders)
