[package]
name = "account-vault"
version = "1.0.0"
description = "账号仓 - 本地账号管理工具"
authors = ["寂镜jnrio"]
license = "Proprietary"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "http-all", "shell-open", "shell-open-api", "dialog-all", "fs-all", "path-all", "clipboard-all", "notification-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled", "vtab"] }
uuid = { version = "1.7", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
argon2 = "0.5"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
csv = "1.3"
rust_xlsxwriter = "0.64"
tauri-plugin-clipboard = "0.4"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
